--- a/client/src/components/SideRatingCount/SideRatingCount.css
+++ b/client/src/components/SideRatingCount/SideRatingCount.css
@@ -38,3 +38,18 @@
     font-size: 15px;
     letter-spacing: 1px;
 }
+.writeAreview{
+    width: 240px;
+    height: 50px;
+    border: none;
+    color: white;
+    background-color: #777;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    transition: background-color .2s;
+}
+.writeAreview:hover{
+  background-color: orange;
+}
