--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -37,12 +37,24 @@
 .footerSocialLogo{
     width: 300px;
 }
-.footerSocialIcons{
-    display: flex;
-}
-.footerSocialIcon{
+.fa {
+    padding: 20px;
+    font-size: 30px;
     width: 50px;
-    height: 50px;
-    object-fit: cover;
-    margin-left: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  .fa:hover {
+    opacity: 0.7;
 }
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
