--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,5 +13,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html{
+  scroll-behavior: smooth
+}
 @import url('./components/mainpage/navber/navber.css');
 @import url('./components/mainpage/Home/home.css');
