--- a/client/src/components/mainpage/cart/cart.css
+++ b/client/src/components/mainpage/cart/cart.css
@@ -1,3 +1,33 @@
+
+.cartHeader{
+    width: 100%;
+    height: 300px;
+    background: url("../../../img/img-24.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+}
+.cartText{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: white;
+    padding: 20px;
+}
+.cartText h1{
+    font-size: 3rem;
+    text-transform: uppercase;
+
+}
+.cartText p {
+    font-size: 30px;
+    opacity: 0.6;
+}
+
+
 .cartWrapper{
     display: flex;
 }
@@ -48,7 +78,6 @@
     height: 30px;
     border: none;
     background-color: #ddd;
-
 }
 .CartCounter{
     margin: 0 5px;
@@ -95,7 +124,7 @@
     font-size: 18px;
     background-color: orange;
     color: white;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 .cartRight{
     margin: 30px;
@@ -162,4 +191,67 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 0 auto;
+}
+/* cartCustomerInfo */
+.cartCustomerInfo{
+    margin-top: 20px;
+}
+.cartCustomerInfoTitle{
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.cartCustomerDetails{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #ddd;
+    padding: 10px;
+    height: 130px;
+}
+.cartCustomerImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-right: 20px;
+
+}
+.cartCustomerImgAndInfo{
+    display: flex;
+    align-items: center;
+}
+.cartCustomerName{
+    font-size: 20px;
+    text-transform: capitalize;
+}
+.cartCustomerButton{
+    font-size: 18px;
+    border: none;
+    color: white;
+    background-color: orangered;
+    padding: 10px 25px;
+    font-weight: 500;
+}
+.cartcustomerInput{
+    border: 1px solid #ddd;
+    padding: 10px;
+    font-size: 18px;
+    margin-right: 5px;
+}
+.deliveryAdress{
+    margin: 20px 0;
+}
+.deliveryAdressWrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+.deliveryAdressTitle{
+    margin-bottom: 10px;
+}
+.deliveryAdressDiv span{
+    font-size: 18px;
+    margin-right: 10px;
+    text-transform: capitalize;
 }
