--- a/client/src/components/mainpage/navber/navber.css
+++ b/client/src/components/mainpage/navber/navber.css
@@ -27,7 +27,7 @@
 }
 .cart-icon span{
     position: absolute;
-    background-color: orange;
+    background-color: orangered;
     color: white;
     padding: 5px 7px;
     font-size: 10px;
