--- a/client/src/components/OurAllBlog/ourAllBlog.css
+++ b/client/src/components/OurAllBlog/ourAllBlog.css
@@ -32,15 +32,36 @@
     padding: 10px 20px;
     font-size: 20px;
 }
-.ourProductsBottom{
+.BlogBottom{
     width: 100%;
     display: grid;
     justify-items: center;
     align-items: center;
     grid-template-columns: repeat( auto-fill, minmax(200px, 1fr));
+    grid-gap: 30px;
 }
-.ourProductsCard{
- width: 200px;
+.blogCard{
+    width: 200px;
+    padding: 10px;
+    box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
+}
+.blogCardImg{
+    width: 100%;
+    height: 150px;
+}
+.blogCardTitle{
+    font-size: 15px;
+    color: #555;
+}
+.blogCardDescription{
+    font-size: 13px;
+    margin: 5px 0;
+    color: #aaa;
+}
+/* .ourProductsCard{
+ width: 250px;
  padding: 10px;
 box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
 -webkit-box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
@@ -51,7 +72,7 @@ box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
 }
 .ourProductsCardImg{
     width: 100%;
-    height: 160px;
+    height: 250px;
     object-fit: cover;
     display: block;
 }
@@ -63,14 +84,14 @@ box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
 
 }
 .ourProductsCardbottomTitle{
-    font-size: 16px;
+    font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #555;
     margin: 5px 0;
 }
 .ourProductsCardbottomText{
-    font-size: 12px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 .ourProductsCardTag{
@@ -100,12 +121,11 @@ box-shadow: -1px 0px 36px -18px rgba(0,0,0,0.75);
 .ourProductsCardAndButton{
     border: none;
     padding: 10px 20px;
+    font-weight: bold;
     background-color: orange;
     color: white;
     border-radius: 5px;
-    font-size: 10px;
-
-}
+} */
 .css-bf9wz-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
     color: #fff;
     background-color: orange !important;
