--- a/client/src/components/blogSidebar/blogSidebar.css
+++ b/client/src/components/blogSidebar/blogSidebar.css
@@ -1,22 +1,23 @@
-.shopSideBar{
+.blogSideBar{
     /* background-color: rgb(237 236 237); */
     padding: 20px;
     margin-right: 10px;
 }
 
-.shopSideBarTop{
+.blogSideBarTop{
     width: 100%;
     margin-bottom: 40px;
 }
-.shopSideBarItems{
+.blogSideBarItems{
     margin: 0;
     padding: 0;
 }
-.shopSideBarTitle{
+.blogSideBarTitle{
     font-size: 2rem;
     margin-bottom: 10px;
+    color: #777;
 }
-.shopSideBarItem {
+.blogSideBarItem {
     list-style: none;
     font-size: 16px;
     margin: 10px 0;
@@ -29,4 +30,21 @@ hr{
     border: none;
 
 }
-
+.sideBarAdText{
+    padding: 20px;
+    color: white;
+}
+.sideBarAdTag{
+    font-size: 20px;
+    font-weight: 300;
+}
+.sideBarAdTitle{
+    font-size: 30px;
+}
+.sideBarAdButton{
+    border: none;
+    background-color: transparent;
+    color: orange;
+    font-size: 20px;
+    
+}
