--- a/client/src/components/shopSideBar/shopSideBar.css
+++ b/client/src/components/shopSideBar/shopSideBar.css
@@ -1,22 +1,23 @@
-.blogSideBar{
+.shopSideBar{
     /* background-color: rgb(237 236 237); */
     padding: 20px;
     margin-right: 10px;
 }
 
-.blogSideBarTop{
+.shopSideBarTop{
     width: 100%;
     margin-bottom: 40px;
 }
-.blogSideBarItems{
+.shopSideBarItems{
     margin: 0;
     padding: 0;
 }
-.blogSideBarTitle{
+.shopSideBarTitle{
     font-size: 2rem;
     margin-bottom: 10px;
+    color: #777;
 }
-.blogSideBarItem {
+.shopSideBarItem {
     list-style: none;
     font-size: 16px;
     margin: 10px 0;
@@ -29,8 +30,10 @@ hr{
     border: none;
 
 }
-
-.blogSideBarAd1{
+.shopSIdeBarBottom{
+    width: 100%;
+}
+.shopSideBarAd1{
     width: 100%;
     height: 500px;
     background-image:
@@ -42,7 +45,7 @@ hr{
     align-items: center;
     justify-content: center;
 }
-.blogSideBarAd2{
+.shopSideBarAd2{
     width: 100%;
     height: 300px;
     background-image:
@@ -54,22 +57,4 @@ hr{
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-}
-.sideBarAdText{
-    padding: 20px;
-    color: white;
-}
-.sideBarAdTag{
-    font-size: 20px;
-    font-weight: 300;
-}
-.sideBarAdTitle{
-    font-size: 30px;
-}
-.sideBarAdButton{
-    border: none;
-    background-color: transparent;
-    color: orange;
-    font-size: 20px;
-    
 }
