--- a/client/src/components/mainpage/navber/navber.css
+++ b/client/src/components/mainpage/navber/navber.css
@@ -1,6 +1,7 @@
 
 
 .navbar{
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,7 +26,7 @@
     margin-right: 10px;
     
 }
-.cart-icon span{
+.cartCount{
     position: absolute;
     background-color: orangered;
     color: white;
@@ -34,4 +35,35 @@
     border-radius: 20px;
     top: -10px;
     right: -10px;
+}
+.menu{
+    display: none;
+}
+
+@media screen and (max-width:730px) {
+    .navbar .menu{
+       display: block;
+    }
+    .navbar ul{
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        right: 0;
+        background-color: orange;
+        width: 100%;
+        height: 100vh;
+        z-index: 99;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 30px;
+    }
+    .cart-icon{
+        display: none;
+    }
+    .navbar ul li .menu{
+         position: absolute;
+         top: 20px;
+         right: 20px;
+    }
+
 }
